aws-project-ec2-vpc-nginx/security_groups.tf
# Security group configuration for nginx

resource "aws_security_group" "nginx-sg" {
  vpc_id = aws_vpc.my-vpc.id

#   Inbound rule for HTTP traffic
ingress {
 from_port = 80
 to_port = 80
 protocol = "tcp"
 cidr_blocks = ["0.0.0.0/0"]
}

# Outbound rule
egress {
  from_port = 0
  to_port = 0
  protocol = "-1"
  cidr_blocks = ["0.0.0.0/0"]
}

tags = {
  Name="Nginx-sg"
}
}
